--- a/templates/manifest.json
+++ b/templates/manifest.json
@@ -1,5 +1,5 @@
 {
-	  "name": "A browser action with no icon that makes the page red",
+	  "name": "RIFU",
 	  "version": "1.0",
 	  "background_page": "background.html",
 	  "permissions": [
